# ci-portal-api-v2

./: .env  DockerFile  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: main.py  router.py
app/archive/: api.py  models.py  service.py
app/auth/: api.py  models.py  service.py
app/bussiness_unit/: api.py  models.py  service.py
app/company/: api.py  models.py  service.py
app/core/: config.py  databases.py  enums.py  logging.py  mail.py  security.py
app/department/: api.py  models.py  service.py
app/division/: api.py  models.py  service.py
app/documents/: api.py  models.py  service.py
app/employee/: api.py  models.py  service.py
app/files/: api.py  service.py
app/middlewares/: telegram_error.py
app/opportunity/: api.py  models.py  service.py
app/plant/: api.py  models.py  service.py
app/schemas/: api.py  db.py  error.py  pagination.py  token.py
app/tools/: api.py  models.py  service.py
app/training/: api.py  models.py  service.py
app/utils/: __init__.py  class_based_views.py  upload.py
templates/: base.html
uploads/archive/: 5. Manufacturing Process Audit Dashboard - Proposed.xlsx  abd-1 hrd SQL error.docx
uploads/opportunity-category/: AME DATA 2024 Concatinated data with MRN.xlsx  BusinessUnit.xlsx
uploads/samples/: Company.xlsx  Department.xlsx  Division.xlsx  Plant.xlsx  Training.xlsx
uploads/template/: e-process audit software updation NEW.pptx
