[tool.poetry]
name = "ci-portal-api"
version = "0.1.0"
description = ""
authors = ["Niranthra <support@niranthra.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.4"}
beanie = "^1.27.0"
pydantic = "2.10.1"
pydantic-settings = "^2.6.1"
pyjwt = "^2.9.0"
python-multipart = "^0.0.17"
motor = "^3.6.0"
orjson = "^3.10.11"
structlog = "^24.4.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pandas = "^2.2.3"
openpyxl = "^3.1.5"
python-dateutil = "^2.9.0.post0"
fastapi-mail = "^1.4.2"
jinja2 = "^3.1.5"
pytailwindcss = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
